# task

./: CMakeLists.txt  README.md  build.sh  main.cpp  run-tests.sh
lib/: CMakeLists.txt  intrusive_list.cpp  intrusive_list.h
src/: CMakeLists.txt  computer_club.cpp  computer_club.h  event.cpp  event.h  parser.cpp  parser.h  state.cpp  state.h  types.h
test/: CMakeLists.txt  parser-tests.cpp  state-tests.cpp  type-tests.cpp
